--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,15 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+tokio = {version="1.37.0", features=["macros", "rt-multi-thread"]}
+tokio-macros = "2"
 
+[dev-dependencies]
+reqwest = "0.11"
+
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "chimp"
